--- a/addons/binding/pom.xml
+++ b/addons/binding/pom.xml
@@ -31,6 +31,7 @@
     <module>org.openhab.binding.exec</module>
     <module>org.openhab.binding.feed</module>
     <module>org.openhab.binding.feed.test</module>
+	<module>org.openhab.binding.fibaro</module>
     <module>org.openhab.binding.folding</module>
     <module>org.openhab.binding.freebox</module>
     <module>org.openhab.binding.gardena</module>
